--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: "BebasNeue";
+  src: url("../fonts/BebasNeue Regular.woff2") format("woff2"),
+       url("../fonts/BebasNeue Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Akzi";
+  src: url("../fonts/AkzidenzGroteskBQ-XBdCnd.woff2") format("woff2"),
+       url("../fonts/AkzidenzGroteskBQ-XBdCnd.woff") format("woff");
+}
+
 html {
 	box-sizing: border-box;
 }
@@ -9,9 +21,13 @@ html {
 }
 
 body {
-	font-family: sans-serif;
+	font-family: 'PT Sans', sans-serif;
 	margin: 0;
 	padding: 0;
+}
+
+p {
+	margin: 0;
 }
 
 ul,li {
@@ -39,8 +55,94 @@ textarea {
 }
 
 .container {
-	max-width:1200px;
+	max-width:900px;
 	padding: 0 15px;
 	margin: 0 auto;
+}
+
+/*HEADER=============================================================*/
+
+.header {
+	height: 600px;
+	padding-top: 30px;
+}
+
+/*header_top==============================*/
+
+.header__top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.header__top-btn {
+	border: none;
+	background-color: #FFF;
+	color: #000;
+	font-size: 10px;
+	padding: 5px;
+	/*display: block;
+	h20+w*/
+	font-family: 'Bebas',sans-serif;
+}
+
+.header__top-btn+.header__top-btn {
+	margin-left: 10px;
+}
+
+.header__top-btn--active {
+	background-color: #000;
+	color: #FFF;
+}
+
+.header__top-onlain {
+	font-family: "Akzi",sans-serif;
+	font-size: 15px;
+	text-transform: uppercase;
+	padding-bottom: 2px;
+	border-bottom: 1px solid #000;
+}
+
+/*header__bottom===============================*/
+
+.header__bottom {
+	display: flex;
+	align-items: center;
+	margin: -25px 0 0 0 ;
+}
+
+.menu {
+	flex: 1 1 33.33333%;
+}
+
+.menu__item {
+	display: flex;
+}
+
+.menu__list+.menu__list {
+	margin-left: 45px;
+}
+
+.menu__list {
+	font-family: "Akzi",sans-serif;
+	text-transform: uppercase;
+	font-size: 15px;
+	letter-spacing: 0.09em;
+}
+
+.menu__item_left {
+	justify-content: flex-end;
+}
+
+.header__logo {
+	text-align: center;
+}
+
+.logo-span {
+	font-family: 'Bebas',sans-serif;
+	font-size: 8px;
+	display: block;
+	line-height: 25px;
+	letter-spacing: 0.5em;
 }
 
